Add Content Fragments, Change NavDrawer Header
- Adds the remaining functionalities for the system: Home Screen, Diseases Screen and Medications Screen. Both Diseases and Medications have one fragment and one acitivity each. The app now is fully functional.

- NavDrawer header is now larger, has a Rod of Caduceus Black Icon on top and shows both user name and email. The gradient drawable was also changed.

- The use of SpannableStringBuilders was replaced with the use of <b></b> tags for the About Activity.

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -22,8 +22,19 @@
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
+
         <activity android:name=".LoginActivity" />
+
         <activity android:name=".SignupActivity" />
+
+        <activity
+            android:name=".MedicationActivity"
+            android:theme="@style/AppTheme" />
+
+        <activity
+            android:name=".DiseaseActivity"
+            android:theme="@style/AppTheme"/>
+
         <activity
             android:name=".AboutActivity"
             android:label="About"
@@ -39,10 +50,6 @@
         <meta-data
             android:name="com.google.android.geo.API_KEY"
             android:value="@string/google_maps_key" />
-
-        <activity
-            android:name=".MapsActivity"
-            android:label="@string/title_activity_maps" />
     </application>
 
 </manifest>
